--- a/css/site.css
+++ b/css/site.css
@@ -5,6 +5,18 @@
   --white-color: #e7e7e7;
 }
 
+.odd{
+  font-weight: 100;
+}
+
+.even{
+  font-weight: bold;
+}
+
+.logoFont{
+  font-family: 'Racing Sans One', cursive;
+}
+
 body {
   color: var(--dark-color);
 }
